--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <p>January 2019 - Present</p>
             </div>
             <div class="job-summary">
-              <p>Managed all curriculum for the adult programs. Created teaching materials and implemented instructor training across 20+ Canadian chapters.</p>
+              <p>Managed all curriculum for the adult programs. </p>
               <p>Key contributions:</p>
               <ul>
                 <li>Overhauled the curriculum and standardized the content and delivery.
@@ -92,7 +92,7 @@
                     <li>Developed the Digital Skills part-time program curriculum.</li>
                   </ul>
                 </li>
-                <li>Provided training for all instructors focusing on creating an inclusive and engaging learning environment.</li>
+                <li>Provided training for all instructors .</li>
                 <li>Maintained the ladieslearningcode.com website.</li>
                 <li>Volunteer lead instructor from 2011-2014 for Toronto workshops and several chapter launches.</li>
               </ul>
