--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
               <ul>
                 <li>Overhauled the curriculum and standardized the content and delivery.
                   <ul>
-                    <li>Created 9 new workshops focusing on HTML, CSS, JavaScript, jQuery, Wordpress and Responsive Web Design.</li>
-                    <li>Created all Hackapalooza content (2 day conference style event) consisting of 2-4 hour workshop sessions.</li>
-                    <li>Created interactive slide deck template for consistent national workshop branding.</li>
+                    <li>Created 9 new workshops</li>
+                    <li>Created all Hackapalooza</li>
+                    <li>Created interactive slide</li>
                     <li>Developed the Digital Skills part-time program curriculum.</li>
                   </ul>
                 </li>
