--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <!-- Project 1 -->
           <section class="project-item">
-            <img src="images/project-courses.jpg" alt="course thumbnail">
+            <img src="images/project_image_erp.jpeg" height="300" alt="erp project">
             <h3>Lynda / LinkedIn Learning Courses</h3>
             <p>Developed content and instruction for various CSS and front-end focused web development courses including CSS Essential Training, Getting Your Website Online, Design Systems & Architectures and more.</p>
             <a class="btn" href="https://www.linkedin.com/learning/instructors/christina-truong?u=2125562" target="_blank">LinkedIn Learning</a>
@@ -39,7 +39,7 @@
 
           <!-- Project 2 -->
           <section class="project-item">
-            <img src="images/project-women-tech.jpg" alt="website thumbnail">
+            <img src="images/project_image_honey.jpeg" height="300" alt="honey project">
             <h3>Women&&Tech</h3>
             <p>Women&&Tech was launched in 2012 to feature interviews with different women working in the tech industry. I became familiar with them when I was invited to be one of the interviewees! A few years later, I joined the team and helped with the relaunch of the site as the front-end architect.</p>
             <a class="btn" href="http://christinatruong.com/projects/women-and-tech-redesign.html" target="_blank">View the case study</a>
@@ -47,7 +47,7 @@
 
           <!-- Project 3 -->
           <section class="project-item">
-            <img src="images/project-wire-ipsum.jpg" alt="website thumbnail">
+            <img src="images/project_image_github.jpeg" height="300" alt="github projects">
             <h3>The Wire Ipsum</h3>
             <p>After coming back from teaching a JavaScript workshop, I felt inspired to create something just for fun. I realized that of all the content/lorem ipsum generators available, there was nothing for HBO’s The Wire fans. I searched for <a href="http://thewireipsum.com" target="_blank">thewireipsum.com</a> domain and it was available! Generate some content for your projects today.</p>
             <a class="btn" href="http://thewireipsum.com" target="_blank">View live site</a>
@@ -69,7 +69,7 @@
               <p>June 2022-Present</p>
             </div>
             <div class="job-summary">
-              <p>Works on various projects based on .NET Technologies where frontends are managed by XAML, AngularJS and React. Participates in all phases of SDLC. See more at  <a href="">.com</a>.</p>
+              <p>Works on various projects based on .NET Technologies with XAML, AngularJS and React frontends. Participates in all phases of SDLC. See more at  <a href="">.com</a>.</p>
             </div>
           </section>
 
@@ -77,25 +77,13 @@
           <section class="job-item">
             <div class="job-details">
               <h3>Full stack developer</h3>
-              <p>Freelance</p>
+              <p>Freelance - remote</p>
               <p>January 2019 - Present</p>
             </div>
             <div class="job-summary">
               <p>Managed all curriculum for the adult programs. </p>
-              <p>Key contributions:</p>
-              <ul>
-                <li>Overhauled the curriculum and standardized the content and delivery.
-                  <ul>
-                    <li>Created 9 new workshops</li>
-                    <li>Created all Hackapalooza</li>
-                    <li>Created interactive slide</li>
-                    <li>Developed the Digital Skills part-time program curriculum.</li>
-                  </ul>
-                </li>
-                <li>Provided training for all instructors .</li>
-                <li>Maintained the ladieslearningcode.com website.</li>
-                <li>Volunteer lead instructor from 2011-2014 for Toronto workshops and several chapter launches.</li>
-              </ul>
+              
+              
             </div>
           </section>
 
