add favicon to image folder

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/28e0285669.js" crossorigin="anonymous"></script>
     <title>Velid Draganovic, Fullstack Developer $ Data Scientist</title>
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
      <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
