add png favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script src="https://kit.fontawesome.com/28e0285669.js" crossorigin="anonymous"></script>
     <title>Velid Draganovic, Fullstack Developer $ Data Scientist</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+		<link rel="icon" type="image" href="/images/favicon.png">
+		
      <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
